--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,6 +1,6 @@
 <h1>Sign in</h1>
 
-<form action="/users/create-session" method="post">
+<form action="/users/create_session" method="post">
     <input type="email" name="email" placeholder="Email" required>
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit" value="Sign-In">
