Manual Authentication setup

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -5,6 +5,9 @@
             Hi Welcome to the user page Here you will See user profile;
         </h1>
 
+        <p>Your User Name is  <%= user_name %>   </p> 
+        <p>Your Email address is <%= user_email %> </p>
+
        
 
 
