--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -4,6 +4,14 @@
         <h1>
             Hi Welcome to the user page Here you will See user profile;
         </h1>
+        <p>
+            <%= user.name %>
+        </p>
+        <p>
+            <%= user.email %>  
+        </p>
+       
+       
 
        
 
