Added Styles for Header and Footer using SCSS

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,4 +1,7 @@
 body{
     margin: 0;
-    /* text-align: center; */
+    // min-height: 100vh;
+    #layout-main{
+        height: 100vh;
+    }
 }
