--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,31 +1,20 @@
 <header>
-    Page header
+    <div id="logo">
+        <p><a href="/">Codeial</a> </p>
+    </div>
 
-    <ul>
+    <div id="header-navigation-items">
+        <ul>
+            <% if(locals.user){ %>
+                <li><a href="/users/profile"> <%= user.name %> </a></li>
+                <li><a href="/users/sign-out"> Sign Out</a></li>
+            <% }else{ %>
+                <li><a href="/users/sign-in"> Sign In </a></li>
+                <li><a href="/users/sign-up"> Sign Up</a></li>
+            <% } %>
+        </ul>
+    </div>
 
-        <% if(locals.user) {%>
 
-            <li>
-                <a href="/users/profile">
-                    <%= user.name %> 
 
-                </a>
-                
-
-            </li>
-            <li>
-                <a href="/users/sign-out">Sign Out</a>
-            </li>
-            <% } else{%>
-                <li>
-                    <a href="/users/sign-in">Sign In</a>
-                </li>
-                <li>
-                    <a href="/users/sign-up">Sign Up</a>
-                </li>
-            
-                
-           <% } %> 
-
-    </ul>
 </header>
