--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -13,4 +13,4 @@ footer {
         color: white;
         text-decoration: none; }
         footer #navigation-items ul li a:hover {
-          color: orange; }
+          color: palegoldenrod; }
