--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,38 @@
+<h1>
+    Codeial <%= title %>
+</h1>
+
+<section id="feed-posts">
+    <h4>Posts</h4>
+    <!-- Only The person who is logged in should be able to post the comment -->
+    <form action="/posts/create" id="new-post-form" method="post">
+        <textarea name="content" cols="30" rows="3" placeholder="Type Here"></textarea>
+        <input type="submit" value="Post">
+
+    </form>
+    <div id="post-list-container">
+        <ul>
+
+            <% for(post of posts) { %>
+
+                <li>
+
+                    <p>
+                        <%= post.content %>
+                            <br>
+
+                            <small>
+                                <%= post.user.name%>
+                            </small>
+                    </p>
+
+                </li>
 
 
-        <h1>
-            Codeial <%= title  %> 
-        </h1>
 
- 
+                <% } %>
+        </ul>
+
+    </div>
+
+</section>
