--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,6 +30,19 @@
                             </small>
                     </p>
 
+                    <div class="post-comments">
+                        <% if(locals.user){%>
+
+                            <form action="/comment/create"  method="POST">
+                                <input type="text" name="content" placeholder="type here to add comment">
+                                <input type="hidden" name="post" value="<%= post._id %> ">
+                                <input type="submit" value="Add comment">
+                        
+                            </form>
+                            <%} %> 
+
+                    </div>
+
                 </li>
 
 
