--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -2,6 +2,7 @@ footer{
     display: flex;
     justify-content: flex-start;
     background-color: grey;
+    // position: fixed;
 
     #rights{
         color: white;
