--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,6 +41,28 @@
                             </form>
                             <%} %> 
 
+                            <div class="post-comments-list">
+                                <ul id="post-comments-<%= post._id %> ">
+                                    <% for(comment of post.comments){%>
+                                    
+                                    <li>
+                                        <p>
+                                            <%= comment.content %>
+                                            <br>
+                                            <small>
+                                                <%= comment.user.name %>
+                                            </small>
+                                        </p>
+                                        
+                                    </li>
+                                    
+                                    <%}
+                                    
+                                    %> 
+                                </ul>
+        
+                            </div>
+
                     </div>
 
                 </li>
