--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -3,5 +3,7 @@ body{
     // min-height: 100vh;
     #layout-main{
         height: 100%;
+        margin-bottom: 60px;
+        overflow: auto;
     }
 }
