--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,4 +1,6 @@
 body {
   margin: 0; }
   body #layout-main {
-    height: 100%; }
+    height: 100%;
+    margin-bottom: 60px;
+    overflow: auto; }
