--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
     <% if(locals.user){%>
 
         <form action="/posts/create" id="new-post-form" method="post">
-            <textarea name="content" cols="30" rows="3" placeholder="Type Here"></textarea>
+            <textarea name="content" cols="30" rows="3" placeholder="Type Here" required></textarea>
             <input type="submit" value="Post">
     
         </form>
@@ -23,6 +23,16 @@
 
                     <p>
                         <%= post.content %>
+
+                        <!-- doing this will allow that onlly user who post the comment is able to deltete it -->
+                        <% if(locals.user&&locals.user.id==post.user.id)
+                        {%>
+                            <small>
+                            <a href="/posts/destroy/<%= post.id %> ">X</a>
+                        </small>
+
+                         <%} %> 
+                       
                             <br>
 
                             <small>
@@ -34,7 +44,7 @@
                         <% if(locals.user){%>
 
                             <form action="/comment/create"  method="POST">
-                                <input type="text" name="content" placeholder="type here to add comment">
+                                <input type="text" name="content" placeholder="type here to add comment" required>
                                 <input type="hidden" name="post" value="<%= post._id %> ">
                                 <input type="submit" value="Add comment">
                         
@@ -48,6 +58,12 @@
                                     <li>
                                         <p>
                                             <%= comment.content %>
+                                                <% if(locals.user&&locals.user.id==comment.user.id) {%>
+                                                    <small>
+                                                        <a href="/comment/destroy/<%= comment.id %> ">X</a>
+                                                    </small>
+                                            
+                                                    <%} %>
                                             <br>
                                             <small>
                                                 <%= comment.user.name %>
