--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,76 +16,9 @@
     
     <div id="post-list-container">
         <ul>
-
             <% for(post of posts) { %>
-
-                <li>
-
-                    <p>
-                        <%= post.content %>
-
-                        <!-- doing this will allow that onlly user who post the comment is able to deltete it -->
-                        <% if(locals.user&&locals.user.id==post.user.id)
-                        {%>
-                            <small>
-                            <a href="/posts/destroy/<%= post.id %> ">X</a>
-                        </small>
-
-                         <%} %> 
-                       
-                            <br>
-
-                            <small>
-                                <%= post.user.name%>
-                            </small>
-                    </p>
-
-                    <div class="post-comments">
-                        <% if(locals.user){%>
-
-                            <form action="/comment/create"  method="POST">
-                                <input type="text" name="content" placeholder="type here to add comment" required>
-                                <input type="hidden" name="post" value="<%= post._id %> ">
-                                <input type="submit" value="Add comment">
-                        
-                            </form>
-                            <%} %> 
-
-                            <div class="post-comments-list">
-                                <ul id="post-comments-<%= post._id %> ">
-                                    <% for(comment of post.comments){%>
-                                    
-                                    <li>
-                                        <p>
-                                            <%= comment.content %>
-                                                <% if(locals.user&&locals.user.id==comment.user.id) {%>
-                                                    <small>
-                                                        <a href="/comment/destroy/<%= comment.id %> ">X</a>
-                                                    </small>
-                                            
-                                                    <%} %>
-                                            <br>
-                                            <small>
-                                                <%= comment.user.name %>
-                                            </small>
-                                        </p>
-                                        
-                                    </li>
-                                    
-                                    <%}
-                                    
-                                    %> 
-                                </ul>
-        
-                            </div>
-
-                    </div>
-
-                </li>
-
-
-
-                <% } %>
+          <%- include('_post') -%> 
+          <% } %>
         </ul>
 
     </div>
