Profile update option added

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -5,11 +5,38 @@
             Hi Welcome to the user page Here you will See user profile;
         </h1>
         <p>
-            <%= user.name %>
+            <%= profile_user.name %>
         </p>
         <p>
-            <%= user.email %>  
+            <%= profile_user.email %>  
         </p>
+
+        <% if(user.id==profile_user.id)
+        // if user matches then show form for update
+        {%>
+            
+            <form action="/users/update/<%= profile_user.id%>" method="post">
+                <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name%>" required>
+                <input type="email" name="email" placeholder="Your email" value="<%= profile_user.email%>" required>
+                <input type="submit" value="Update">
+            </form>
+            
+        <%}
+        else{ // else show only name
+            %>
+            
+            <p>
+            <%= profile_user.name %>
+        </p>
+        <p>
+            <%= profile_user.email %>  
+        </p>
+            
+            <%
+        }
+        
+        
+        %> 
        
        
 
