--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -6,7 +6,7 @@
     <div id="header-navigation-items">
         <ul>
             <% if(locals.user){ %>
-                <li><a href="/users/profile"> <%= user.name %> </a></li>
+                <li><a href="/users/profile/<%= user.id %> "> <%= user.name %> </a></li>
                 <li><a href="/users/sign-out"> Sign Out</a></li>
             <% }else{ %>
                 <li><a href="/users/sign-in"> Sign In </a></li>
