--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -35,7 +35,7 @@
                 <div class="post-comments-list">
                     <ul id="post-comments-<%= post._id %> ">
                         <% for(comment of post.comments){%>
-                       <%- include('_comment')-%>
+                       <%- include('_comment')%>
                        <%}%> 
                     </ul>
 
