--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,10 +17,21 @@
     <div id="post-list-container">
         <ul>
             <% for(post of posts) { %>
-          <%- include('_post') -%> 
+          <%- include('_post') %> 
           <% } %>
         </ul>
 
     </div>
+
+</section>
+
+<section id="user-friends">
+    <h4>Friends</h4>
+    <% for(u of all_users)
+    {%> 
+        <p>
+            <a href="/users/profile/<%= u.id %>"><%= u.name%></a>
+        </p>
+     <%} %> 
 
 </section>
