--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,37 +1,40 @@
-<h1>
-    Codeial <%= title %>
-</h1>
+<link rel="stylesheet" href="/css/home.css">
 
-<section id="feed-posts">
-    <h4>Posts</h4>
-    <!-- Only The person who is logged in should be able to post the comment -->
-    <% if(locals.user){%>
+<div id="home-container">
 
-        <form action="/posts/create" id="new-post-form" method="post">
-            <textarea name="content" cols="30" rows="3" placeholder="Type Here" required></textarea>
-            <input type="submit" value="Post">
-    
-        </form>
-        <%} %> 
-    
-    <div id="post-list-container">
-        <ul>
-            <% for(post of posts) { %>
-          <%- include('_post') %> 
-          <% } %>
-        </ul>
+    <section id="feed-posts">
+        <h4>Posts</h4>
+        <!-- Only The person who is logged in should be able to post the comment -->
+        <% if(locals.user){%>
 
-    </div>
+            <form action="/posts/create" id="new-post-form" method="post">
+                <textarea name="content" cols="30" rows="3" placeholder="Type Here" required></textarea>
+                <input type="submit" value="Post">
 
-</section>
+            </form>
+            <%} %>
 
-<section id="user-friends">
-    <h4>Friends</h4>
-    <% for(u of all_users)
-    {%> 
-        <p>
-            <a href="/users/profile/<%= u.id %>"><%= u.name%></a>
-        </p>
-     <%} %> 
+                <div id="post-list-container">
+                    <ul>
+                        <% for(post of posts) { %>
+                            <%- include('_post') %>
+                                <% } %>
+                    </ul>
 
-</section>
+                </div>
+
+    </section>
+
+    <section id="user-friends">
+        <h4>Friends</h4>
+        <% for(u of all_users) {%>
+            <p>
+                <a href="/users/profile/<%= u.id %>">
+                    <%= u.name%>
+                </a>
+            </p>
+            <%} %>
+
+    </section>
+
+</div>
