--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -5,7 +5,16 @@
     <div id="navigation-items">
         <ul>
             <li><a href="/"> Home </a></li>
-            <li><a href="/users/profile"> Profile </a></li>
+           <% if(locals.user){ %>
+                <li><a href="/users/profile/<%= user.id %> "> Profile </a></li>
+                
+            <% }else{ %>
+                <li><a href="/users/sign-in"> Profile </a></li>
+               
+            <% }
+            
+            %>
+         
         </ul>
     </div>
 </footer>
