--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,15 +6,38 @@
         <title>
             <%= title %>
         </title>
-   
+        <%- style %> 
+       
+        <!-- <link rel="stylesheet" href="/css/chat_box.css"> -->
+        <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"
+      integrity="sha512-0p3K0H3S6Q4bEWZ/WmC94Tgit2ular2/n0ESdfEX8l172YyQj8re1Wu9s/HT9T/T2osUw5Gx/6pAZNk3UKbESw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"
+      integrity="sha512-lOrm9FgT1LKOJRUXF3tp6QaMorJftUjowOWiDcG5GFZ/q7ukof19V0HKx/GWzXCdt9zYju3/KhBNdCLzK8b90Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+      <link rel="stylesheet" href="/css/layout.css">
+      <link rel="stylesheet" href="/css/header.css">
+      <link rel="stylesheet" href="/css/footer.css"> -->
       <link rel="stylesheet" href="/css/layout.css">
       <link rel="stylesheet" href="/css/header.css">
       <link rel="stylesheet" href="/css/footer.css">
-      <%- style %> 
+     
     </head>
     <body>
       <!-- <header id="layout-header"> -->
         <%- include('_header.ejs') %> 
+      
      
        
 
@@ -26,7 +49,24 @@
      
 
       <%- include('_footer.ejs') %> 
-    
+     
+      <script>
+
+        <% if(flash.success &&flash.success.length>0){%>
+          new Noty({
+            theme:'relax',
+    text: '<%=flash.success%>',
+    type:'success',
+    timeout:1000,
+    layout:'topRight',
+    // animation: {
+    //     open: 'animated bounceInRight', // Animate.css class names
+    //     close: 'animated bounceOutRight' // Animate.css class names
+    // }
+}).show();
+          <%} %> 
+      </script>
+
         
     </body>
 </html>
