--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,11 +1,11 @@
 
                         
-    <li>
+    <li id="comment-<%= comment.id %>">
         <p>
             <%= comment.content %>
                 <% if(locals.user&&locals.user.id==comment.user.id) {%>
                     <small>
-                        <a href="/comment/destroy/<%= comment.id %> ">X</a>
+                        <a class="delete-comment-button" href="/comment/destroy/<%= comment.id %>">X</a>
                     </small>
             
                     <%} %>
