--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,50 +1,43 @@
+<li id="post-<%= post._id %>">
 
-
-    <li>
-
-        <p>
-            <%= post.content %>
+    <p>
+        <%= post.content %>
 
             <!-- doing this will allow that onlly user who post the comment is able to deltete it -->
-            <% if(locals.user&&locals.user.id==post.user.id)
-            {%>
+            <% if(locals.user&&locals.user.id==post.user.id) {%>
                 <small>
-                <a href="/posts/destroy/<%= post.id %> ">X</a>
-            </small>
-
-             <%} %> 
-           
-                <br>
-
-                <small>
-                    <%= post.user.name%>
+                    <a class="delete-post-button" href="/posts/destroy/<%= post.id %>">X</a>
                 </small>
-        </p>
 
-        <div class="post-comments">
-            <% if(locals.user){%>
+                <%} %>
 
-                <form action="/comment/create"  method="POST">
-                    <input type="text" name="content" placeholder="type here to add comment" required>
-                    <input type="hidden" name="post" value="<%= post._id %> ">
-                    <input type="submit" value="Add comment">
-            
-                </form>
-                <%} %> 
+                    <br>
+
+                    <small>
+                        <%= post.user.name%>
+                    </small>
+    </p>
+
+    <div class="post-comments">
+        <% if(locals.user){%>
+
+            <form action="/comment/create" id="new-comment-form" method="POST">
+                <input type="text" name="content" placeholder="type here to add comment" required>
+                <input type="hidden" name="post" value="<%= post._id %> ">
+                <input type="submit" value="Add comment">
+
+            </form>
+            <%} %>
 
                 <div class="post-comments-list">
-                    <ul id="post-comments-<%= post._id %> ">
+                    <ul id="post-comments-<%= post._id %>">
                         <% for(comment of post.comments){%>
-                       <%- include('_comment')%>
-                       <%}%> 
+                            <%- include('_comment')%>
+                        <%}%>
                     </ul>
 
                 </div>
 
-        </div>
+    </div>
 
-    </li>
-
-
-
- 
+</li>
