--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
                     <ul>
                         <% for(post of posts) { %>
                             <%- include('_post') %>
-                                <% } %>
+                        <% } %>
                     </ul>
 
                 </div>
@@ -38,3 +38,5 @@
     </section>
 
 </div>
+<script src="/js/home_post.js"></script>
+<script src="/js/home_comments.js"></script>
