--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -4,21 +4,27 @@
         <h1>
             Hi Welcome to the user page Here you will See user profile;
         </h1>
+        <img src="<%= user.avatar %> " alt="<%= user.name %>" width="100">
         <p>
             <%= profile_user.name %>
         </p>
         <p>
             <%= profile_user.email %>  
         </p>
+        <br>
+
+       
 
         <% if(user.id==profile_user.id)
         // if user matches then show form for update
         {%>
             
-            <form action="/users/update/<%= profile_user.id%>" method="post">
+            <form action="/users/update/<%= profile_user.id%>" enctype="multipart/form-data" method="post">
                 <input type="text" name="name" placeholder="Your Name" value="<%= profile_user.name%>" required>
                 <input type="email" name="email" placeholder="Your email" value="<%= profile_user.email%>" required>
+                <input type="file" name="avatar" placeholder="Profile Picture" >
                 <input type="submit" value="Update">
+
             </form>
             
         <%}
