--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -5,3 +5,8 @@
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit" value="Sign-In">
 </form>
+
+
+<p>
+    <a href="/users/auth/google">Google sign-in/sign-up</a>
+</p>
