--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -5,6 +5,7 @@
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit" value="Sign-In">
 </form>
+<a href="/users/reset_password "><Button>Forgot Password</Button></a>
 
 
 <p>
