--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0; }
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
   body #layout-main {
     height: 100%;
     margin-bottom: 60px;
