--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,12 +1,19 @@
 #home-container{
     display: flex;
     #feed-posts{
-        width: 70%;
+        width: 60%;
         padding: 10px;
         // text-align: center;
     }
+    #user-nav
+    {
+        width: 20%;
+        padding: 10px;
+        border-right: 1px solid lightgrey;
+    }
+    
     #user-friends{
-        width: 30%;
+        width: 20%;
         padding: 10px;
         border-left: 1px solid lightgray;
         // height: 100%;
