--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,5 +1,5 @@
 <footer>
-    <div id="rights">
+    <div id="left">
         <p> @Shubham. All Rights Reserved</p>
     </div>
     <div id="navigation-items">
