--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -6,9 +6,10 @@ footer{
     bottom: 0;
     width: 100%;
 
-    #rights{
+    #left{
         color: white;
         margin-left: 10px;
+        margin-top: 10px;
     }
 
     #navigation-items{
