--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     // min-height: 100vh;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     #layout-main{
         height: 100%;
         margin-bottom: 60px;
