--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -3,15 +3,25 @@
     <li id="comment-<%= comment.id %>">
         <p>
             <%= comment.content %>
-                <% if(locals.user&&locals.user.id==comment.user.id) {%>
+                <% if(locals.user&&(locals.user.id == comment.user.id || locals.user.id == post.user.id)) {%>
                     <small>
                         <a class="delete-comment-button" href="/comment/destroy/<%= comment.id %>">X</a>
                     </small>
             
-                    <%} %>
+                <%} %>
             <br>
             <small>
                 <%= comment.user.name %>
+            </small>
+            <br>
+            <small>
+                <% if (locals.user){ %>
+                    <a class="toggle-like-button" data-likes="<%= comment.likes.length %>" href="/likes/toggle/?id=<%=comment._id%>&type=Comment">
+                            <%= comment.likes.length %> Likes
+                    </a>
+                <% }else{ %>
+                    <%= comment.likes.length %> Likes
+                <% } %>
             </small>
         </p>
         
