Chat engine done

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,7 @@
                 </div>
 
     </section>
-
+    <% if(locals.user) { %>
     <section id="user-friends">
         <h4>Friends</h4>
         <% for(u of all_users) {%>
@@ -47,6 +47,9 @@
             <%} %>
 
     </section>
+    <% } %>
+
+    <%- include('_chat_box') -%>
 
 </div>
 <script src="/js/home_post.js"></script>
@@ -58,3 +61,10 @@
         let toggleLike = new ToggleLike(self);
     });
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js"></script>
+<script src="/js/chat_engine.js"></script>
+<% if (locals.user){ %>
+<script>
+    new ChatEngine('user-chat-box', '<%= locals.user.email %>')
+</script>
+<% } %>
