--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="<%= assetPath('css/home.css') %> ">
+<link rel="stylesheet" href="<%= assetPath('css/chat_box.css') %> ">
 
 <div id="home-container">
     <section id="user-nav">
@@ -52,9 +53,13 @@
     <%- include('_chat_box') -%>
 
 </div>
-<script src="/js/home_post.js"></script>
-<script src="/js/home_comments.js"></script>
-<script src="/js/toggle_likes.js"></script>
+<!-- <script src="/js/home_post.js"></script>
+<script src="/js/home_comments.js"></script> -->
+<script src="<%= assetPath('js/home_post.js') %>"></script>
+<script src="<%= assetPath('js/home_comments.js') %>" ></script>
+
+<!-- <script src="/js/toggle_likes.js"></script> -->
+<script src="<%= assetPath('js/toggle_likes.js') %>"></script>
 <script>
     $('.toggle-like-button').each(function(){
         let self = this;
@@ -62,7 +67,8 @@
     });
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js"></script>
-<script src="/js/chat_engine.js"></script>
+<!-- <script src="/js/chat_engine.js"></script> -->
+<script src="<%= assetPath('js/chat_engine.js') %>"></script>
 <% if (locals.user){ %>
 <script>
     new ChatEngine('user-chat-box', '<%= locals.user.email %>')
